src/Futhark/Raw.hs

{-# LANGUAGE ForeignFunctionInterface #-}
module Futhark.Raw where
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import Foreign.C.Types (CBool(..), CSize(..), CChar(..), CFile(..))
import Foreign.Ptr (Ptr)
import Control.Parallel.OpenCL (CLMem, CLCommandQueue)
--Generated by Futhark 0.21.0
--git: 173018d (Fri Nov 19 10:46:29 2021 +0100)

--Headers\n")
















--Initialisation
data Futhark_context_config
foreign import ccall unsafe "futhark_context_config_new"
  context_config_new
    :: IO (Ptr Futhark_context_config)

foreign import ccall unsafe "futhark_context_config_free"
  context_config_free
    :: Ptr Futhark_context_config
    -> IO ()

foreign import ccall unsafe "futhark_context_config_add_build_option"
  context_config_add_build_option
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_debugging"
  context_config_set_debugging
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_profiling"
  context_config_set_profiling
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_logging"
  context_config_set_logging
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_device"
  context_config_set_device
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_platform"
  context_config_set_platform
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_select_device_interactively"
  context_config_select_device_interactively
    :: Ptr Futhark_context_config
    -> IO ()

foreign import ccall unsafe "futhark_context_config_list_devices"
  context_config_list_devices
    :: Ptr Futhark_context_config
    -> IO ()

foreign import ccall unsafe "futhark_context_config_dump_program_to"
  context_config_dump_program_to
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_load_program_from"
  context_config_load_program_from
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_dump_binary_to"
  context_config_dump_binary_to
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_load_binary_from"
  context_config_load_binary_from
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_group_size"
  context_config_set_default_group_size
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_num_groups"
  context_config_set_default_num_groups
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_tile_size"
  context_config_set_default_tile_size
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_reg_tile_size"
  context_config_set_default_reg_tile_size
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_threshold"
  context_config_set_default_threshold
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_tuning_param"
  context_config_set_tuning_param
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> CSize
    -> IO Int

data Futhark_context
foreign import ccall unsafe "futhark_context_new"
  context_new
    :: Ptr Futhark_context_config
    -> IO (Ptr Futhark_context)

foreign import ccall unsafe "futhark_context_new_with_command_queue"
  context_new_with_command_queue
    :: Ptr Futhark_context_config
    -> CLCommandQueue
    -> IO (Ptr Futhark_context)

foreign import ccall unsafe "futhark_context_free"
  context_free
    :: Ptr Futhark_context
    -> IO ()

foreign import ccall unsafe "futhark_context_get_command_queue"
  context_get_command_queue
    :: Ptr Futhark_context
    -> IO CLCommandQueue

foreign import ccall unsafe "futhark_get_tuning_param_count"
  get_tuning_param_count
    :: IO Int

foreign import ccall unsafe "futhark_get_tuning_param_name"
  get_tuning_param_name
    :: Int
    -> IO (Ptr CChar)

foreign import ccall unsafe "futhark_get_tuning_param_class"
  get_tuning_param_class
    :: Int
    -> IO (Ptr CChar)

--Arrays
data Futhark_i64_3d
foreign import ccall unsafe "futhark_new_i64_3d"
  new_i64_3d
    :: Ptr Futhark_context
    -> Ptr Int64
    -> Int64
    -> Int64
    -> Int64
    -> IO (Ptr Futhark_i64_3d)

foreign import ccall unsafe "futhark_new_raw_i64_3d"
  new_raw_i64_3d
    :: Ptr Futhark_context
    -> CLMem
    -> Int64
    -> Int64
    -> Int64
    -> Int64
    -> IO (Ptr Futhark_i64_3d)

foreign import ccall unsafe "futhark_free_i64_3d"
  free_i64_3d
    :: Ptr Futhark_context
    -> Ptr Futhark_i64_3d
    -> IO Int

foreign import ccall unsafe "futhark_values_i64_3d"
  values_i64_3d
    :: Ptr Futhark_context
    -> Ptr Futhark_i64_3d
    -> Ptr Int64
    -> IO Int

foreign import ccall unsafe "futhark_values_raw_i64_3d"
  values_raw_i64_3d
    :: Ptr Futhark_context
    -> Ptr Futhark_i64_3d
    -> IO CLMem

foreign import ccall unsafe "futhark_shape_i64_3d"
  shape_i64_3d
    :: Ptr Futhark_context
    -> Ptr Futhark_i64_3d
    -> IO (Ptr Int64)

--Opaque values
--Entry points
foreign import ccall unsafe "futhark_entry_shuffler"
  entry_shuffler
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_i64_3d)
    -> Int64
    -> Int64
    -> Int64
    -> IO Int

--Miscellaneous
foreign import ccall unsafe "futhark_context_sync"
  context_sync
    :: Ptr Futhark_context
    -> IO Int

foreign import ccall unsafe "futhark_context_report"
  context_report
    :: Ptr Futhark_context
    -> IO (Ptr CChar)

foreign import ccall unsafe "futhark_context_get_error"
  context_get_error
    :: Ptr Futhark_context
    -> IO (Ptr CChar)

foreign import ccall unsafe "futhark_context_set_logging_file"
  context_set_logging_file
    :: Ptr Futhark_context
    -> Ptr CFile
    -> IO ()

foreign import ccall unsafe "futhark_context_pause_profiling"
  context_pause_profiling
    :: Ptr Futhark_context
    -> IO ()

foreign import ccall unsafe "futhark_context_unpause_profiling"
  context_unpause_profiling
    :: Ptr Futhark_context
    -> IO ()

foreign import ccall unsafe "futhark_context_clear_caches"
  context_clear_caches
    :: Ptr Futhark_context
    -> IO Int




